--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.social-btn {
+  color: red;
+  font-size: 25px;
+  border: solid black 2px;
+  border-radius: 3px;
+  padding: 5px;
+  background-color: lightgrey;
+  box-shadow: 3px 3px 2px grey;
+}
