--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,7 @@
 <h1>Welcome#about</h1>
 <p>Find me in app/views/welcome/about.html.erb</p>
+<div class="col-sm-2">
+</div>
+<div class="col-sm-10">
+  <%= link_to "My Github", "https://github.com/sanfordpaul", class: "social-btn" %>
+</div>
