--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
 
     <div class="container">
       <ul class="nav nav-tabs">
-         <li><%= link_to "Home", welcome_index_path %></li>
-         <li><%= link_to "About", welcome_about_path %></li>
-         <li><%= link_to "Contacts", welcome_contact_path %></li>
-         <li><%= link_to "FAQ", welcome_faq_path %></li>
+        <li><%= link_to "Bloccit", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
+        <li><%= link_to "Contacts", welcome_contact_path %></li>
+        <li><%= link_to "FAQ", welcome_faq_path %></li>
       </ul>
       <%= yield %>
     </div>
