--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,10 +24,14 @@
  @import "bootstrap";
 
 
-  .user-info {
-    margin-top: 9px;
-  }
+.user-info {
+  margin-top: 9px;
+}
 
-  .nav {
-    margin-top: 5px;
-  }
+.nav {
+  margin-top: 5px;
+}
+
+.avatar {
+  float: right;
+}
