--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,8 @@
 <h1><%= @topic.name %></h1>
-<% if user_is_authorized_for_topics? %>
+<% if user_is_authorized_to_edit_topics? %>
   <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+<% end %>
+<% if user_is_authorized_to_delete_topics? %>
   <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
 <% end %>
 <div class="row">
@@ -37,7 +39,7 @@
     <% if current_user %>
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
     <% end %>
-    <% if user_is_authorized_for_topics? %>
+    <% if user_is_authorized_to_create_topics? %>
       <%= link_to "New Sponsored Post", new_topic_sponsored_post_path(@topic), class: 'btn btn-success' %>
     <% end %>
   </div>
