--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,39 +1,28 @@
-<h1><%= @topic.name %></h1>
-<% if user_is_authorized_to_edit_topics? %>
-  <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
-<% end %>
-<% if user_is_authorized_to_delete_topics? %>
-  <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
-<% end %>
+<div class="row">
+  <div class="col-md-8">
+    <h1><%= @topic.name %></h1>
+  </div>
+  <div class="col-md-4" style="margin-top: 23px">
+    <% if user_is_authorized_to_edit_topics? %>
+      <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+    <% end %>
+    <% if user_is_authorized_to_delete_topics? %>
+      <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+    <% end %>
+  </div>
+</div>
+
+
 <div class="row">
   <div class="col-md-8">
     <p class="lead"><%= @topic.description %></p>
-    <% @topic.posts.each do |post| %>
-      <div class="media">
-        <div class="media-body">
-          <h4 class="media-heading">
-            <%= link_to post.title, topic_post_path(@topic, post) %>
-          </h4>
-          <small>
-            submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
-            <%= post.comments.count %> Comments
-          </small>
-        </div>
-      </div>
-    <% end %>
+
+    <%= render @topic.posts %>
+
     <h3>Sponsored Posts</h3>
-    <% @topic.sponsored_posts.each do |sponsored_post| %>
-      <div class="media">
-        <div class="media-body">
-          <h4 class="media-heading">
-            <%= link_to sponsored_post.title, topic_sponsored_post_path(@topic, sponsored_post) %>
-          </h4>
-          <small>
-            submitted <%= time_ago_in_words(sponsored_post.created_at) %> ago
-          </small>
-        </div>
-      </div>
-    <% end %>
+
+    <%= render @topic.sponsored_posts %>
+
   </div>
   <div class="col-md-4">
     <% if current_user %>
