--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,16 +1,23 @@
-<h1>
-  <%= @post.title %> <br>
-  <small>
-    submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
-  </small>
-</h1>
+<div>
+
+  <%= render partial: 'votes/voter', locals: { post: @post } %>
+
+  <h1>
+    <%= @post.title %> <br>
+    <small>
+      submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
+    </small>
+  </h1>
+</div>
 
  <div class="row">
    <div class="col-md-8">
      <p><%= @post.body %></p>
      <div>
        <h3>Comments</h3>
+
        <%= render @post.comments %>
+
      </div>
      <% if current_user %>
        <%= render 'comments/form', comment: Comment.new, post: @post %>
@@ -27,5 +34,17 @@
          <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
 
      <% end %>
+   </div>
+
+   <div class="col-md-4">
+     <h3>
+       <%= pluralize(@post.points, 'point') %>
+       <div>
+         <small>
+           <%= pluralize(@post.up_votes, 'up vote') %>,
+           <%= pluralize(@post.down_votes, 'down vote') %>
+         </small>
+       </div>
+     </h3>
    </div>
  </div>
