--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -36,15 +36,18 @@
      <% end %>
    </div>
 
-   <div class="col-md-4">
-     <h3>
-       <%= pluralize(@post.points, 'point') %>
-       <div>
-         <small>
-           <%= pluralize(@post.up_votes, 'up vote') %>,
-           <%= pluralize(@post.down_votes, 'down vote') %>
-         </small>
-       </div>
-     </h3>
-   </div>
- </div>
+    <div class="col-md-4">
+    <h3>
+      <%= pluralize(@post.points, 'point') %>
+      <div>
+        <small>
+          <%= pluralize(@post.up_votes, 'up vote') %>,
+          <%= pluralize(@post.down_votes, 'down vote') %>
+        </small>
+     </div>
+    </h3>
+     <% if current_user %>
+       <%= render partial: 'favorites/favorite', locals: { post: @post } %>
+     <% end %>
+  </div>
+</div>
