--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,11 +1,13 @@
-<div class="media">
-  <div class="media-body">
-    <h4 class="media-heading">
-      <%= link_to post.title, topic_post_path(@topic, post) %>
-    </h4>
-    <small>
-      submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
-      <%= post.comments.count %> Comments
-    </small>
+<%= content_tag :div, class: 'media', id: "post-#{post.id}" do %>
+  <div class="media">
+    <div class="media-body">
+      <h4 class="media-heading">
+        <%= link_to post.title, topic_post_path(@topic, post) %>
+      </h4>
+      <small>
+        submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %> <br>
+        <%= post.comments.count %> Comments
+      </small>
+    </div>
   </div>
-</div>
+<% end %>
