--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,7 @@
         <div class="pull-right user-info">
           <% if current_user %>
             <%= image_tag avatar_url(current_user), class: "avatar" %>
-            <%= current_user.name %>
-            <br>
+            <%= link_to current_user.name, user_path(current_user) %>            <br>
             <%= link_to "Sign Out", session_path(current_user), method: :delete %>
           <% else %>
             <%= link_to "Sign In", new_session_path %> or
