--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,12 +16,15 @@
      <div>
        <h3>Comments</h3>
 
-       <%= render @post.comments %>
-
+       <div class='js-comments'>
+          <%= render @post.comments %>
+        </div>
      </div>
      <% if current_user %>
-       <%= render 'comments/form', comment: Comment.new, post: @post %>
-     <% end %>
+      <div class='new-comment'>
+        <%= render 'comments/form', comment: Comment.new, post: @post%>
+      </div>
+      <% end %>
    </div>
    <div class="col-md-4">
      <% if user_is_authorized_to_edit_posts?(@post) %>
